# nervox

./: .gitignore  README.md  add_header.py  cheat_sheet.md  environment.yml  license_header.py  pyproject.toml  setup.py
.github/: pull_re
.github/actions/: evaluate_diff.yml
.github/evaluate_diff/: evaluate_diff.sh
.github/workflows/: Dangerfile  diff_python.sh  evaluate_diff.sh  pull_request.yml
.snippets/: capture_params.py  keras_recursive.py  ncurses.py  test_module.py  tf_exportation.py  tf_gradients.py  tf_optimization.ipynb  tf_recursive.py  tf_recursive_export.py  tf_variables.py
nervox/: .gitignore  __init__.py  exporter.py  trainer.py
nervox/brainstorm/: curses_sample.py
nervox/callbacks/: __init__.py  callback.py  callbacks.py
nervox/components/: __init__.py  exporter.py  trainer.py
nervox/comps/: .gitignore  __init__.py  exporter.py  pusher.py  trainer.py
nervox/core/: __init__.py  callbacks.py  converters.py  objective.py  protocol.py
nervox/data/: __init__.py  data_stream.py  datastream.py  streamer.py  transform.py  transforms.py
nervox/losses/: __init__.py  classification.old.py  classification.py
nervox/metrics/: __init__.py  classification.py  keras_metrics.py  metric.py  metrics.py
nervox/models/: __init__.py  convnet.py  convnet_mini.py  densenet.py  densenet_nutrition5k.py  efficientnet.py  mobilenetv2.py  pre_trained.py  terminals.py
pursuits/: _cifar10.py  cifar10.py  temp.py  train_cifar10.py  workflow_cifar10.py
tasks/: cifar10.py
tests/: __init__.py  run.py  test_environment.py  test_trainer.py
(+91 files in other folders)
